--- a/lib/tests/switches.html
+++ b/lib/tests/switches.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--><html><!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <title>Switches</title>
@@ -78,7 +81,7 @@
     <script src="../../docs/assets/js/bootstrap-typeahead.js"></script>
 
     <script>
-      $('input[type="checkbox"]').svitch();
+      $('input[type="checkbox"]').switch();
     </script>
 
   </body>
