--- a/lib/tests/switches.html
+++ b/lib/tests/switches.html
@@ -81,7 +81,7 @@
     <script src="../../docs/assets/js/bootstrap-typeahead.js"></script>
 
     <script>
-      $('input[type="checkbox"]').switch();
+      $('input[type="checkbox"]').svitch();
     </script>
 
   </body>
